# mlda

./: .gitignore  LICENSE  README.md  exam.md  pyproject.toml  results.csv
labs/: result.csv  result.md  results.csv
labs/lab01/: lab01-06-bolshedvorskii.ipynb  lsa.ipynb  lsa.md
labs/lab01/lab01_03/: lab01_03.ipynb
labs/lab01/lab01_04/: lab01_04.ipynb
labs/lab01/lab01_06/: lab01-06.ipynb
labs/lab01/lab01_07/: lab01_07_busarov.ipynb
labs/lab01/lab01_07_busarov/: lab01_07_busarov.ipynb
labs/lab01/lab01_08/: lab01_08.ipynb
labs/lab01/lab01_10/: lsa_10.ipynb
labs/lab01/lab01_11/: lab01_11.ipynb
labs/lab01/lab01_12/: lab01_12.ipynb
labs/lab01/lab01_13/: lab01_13.ipynb
labs/lab01/lab01_16/: IMG_9341.HEIC  IMG_9344.HEIC
labs/lab02/: ML_lab02_17.ipynb  Untitled.ipynb  lab02_14.ipynb  lab02_19.ipynb
labs/lab02/lab02-06-bolshedvorskii/: lab02-06-bolshedvorsii.ipynb
labs/lab02/lab02_03/: lab02_03.ipynb
labs/lab02/lab02_04/: lab02_04.ipynb
labs/lab02/lab02_05/: lab02_05.ipynb
labs/lab02/lab02_06/: lab02-06-bolshedvorsii.ipynb
labs/lab02/lab02_07/: MinesInfo.xls  lab02_07_Busarov.ipynb
labs/lab02/lab02_08/: lab02_08.ipynb
labs/lab02/lab02_09/: lab02_9.ipynb
labs/lab02/lab02_10/: Untitled.ipynb
labs/lab02/lab02_11/: lab02_11.ipynb
labs/lab02/lab02_12/: lab_02_12.ipynb
labs/lab02/lab02_13/: lab02_13.ipynb  penguins.data
labs/lab02/lab02_14/: lab02_14.ipynb
labs/lab02/lab02_15/: lab02_15.ipynb
labs/lab03/: lab03_18.ipynb  main.ipynb  main.md
labs/lab03/Lab03/: ML_lab03_17.ipynb
labs/lab03/lab03_03/: lab03_03.ipynb
labs/lab03/lab03_04/: lab03_04.ipynb
labs/lab03/lab03_05/: lab03_05.ipynb
labs/lab03/lab03_06/: lab.ipynb
labs/lab03/lab03_07/: lab03_07_Busarov.ipynb
labs/lab03/lab03_08/: lab03_08.ipynb
labs/lab03/lab03_09/: lab03_9.ipynb
labs/lab03/lab03_10/: lab3.ipynb
labs/lab03/lab03_11/: lab03_11.ipynb
labs/lab03/lab03_13/: lab03_13.ipynb
labs/lab03/lab03_14/: lab03_14.ipynb
labs/lab03/lab03_15/: lab03_15.ipynb
labs/lab03/lab03_16/: lab03_16.ipynb
labs/lab04/: main.md
labs/lab04/img/: ~.gitkeep
labs/lab04/lab04_03/: lab04_03.ipynb
labs/lab04/lab04_04/: lab04_04.ipynb  tarkov_ammo.csv
labs/lab04/lab04_05/: lab04_05.ipynb  mr-olympia-champions.csv
labs/lab04/lab04_06/: workflow.ipynb
labs/lab04/lab04_07/: lab04_07_Busarov.ipynb
labs/lab04/lab04_08/: lab04_08.ipynb
labs/lab04/lab04_10/: lab04.ipynb
labs/lab04/lab04_11/: lab04_11.ipynb
labs/lab04/lab04_12/: lab_04_12.ipynb
labs/lab04/lab04_14/: lab04_14.ipynb
labs/lab04/lab04_15/: lab04_15.ipynb  random_data.csv
labs/lab04/lab04_16/: lab04_16.ipynb
labs/lab04/lab04_17/: lab04_17.ipynb
labs/lab04/lab04_18/: random_data.csv
labs/lab05/: Untitled.ipynb  main.md
labs/lab05/lab05_03/: lab05_03.ipynb
labs/lab05/lab05_04/: lab05_04.ipynb
labs/lab05/lab05_06/: tree.dot  workflow.ipynb
labs/lab05/lab05_07/: lab05_07_busarov.ipynb
labs/lab05/lab05_08/: breast_cancer_tree  lab05_08.ipynb
labs/lab05/lab05_11/: lab05_11.ipynb
labs/lab05/lab05_12/: lab_05_12.ipynb  tree.dot
labs/lab05/lab05_14/: lab05_14.ipynb
labs/lab05/lab05_15/: bestsellers.dot  lab05_15.ipynb  random_data.csv
labs/lab05/lab05_16/: lab05_16.ipynb  titanic.dot  titanic_depth_2.dot
labs/lab05/lab05_18/: random_data.csv
labs/lab06/: main.ipynb  main.md
labs/lab06/lab06_03/: lab06_03.ipynb
labs/lab06/lab06_05/: Chemical Composion of Ceramic.csv
labs/lab06/lab06_07/: lab06_07_Busarov.ipynb
labs/lab06/lab06_08/: lab06_08.ipynb
labs/lab06/lab06_09/: lab06_9.ipynb
labs/lab06/lab06_13/: lab06_13.ipynb
labs/lab06/lab06_15/: lab06_15.ipynb
labs/lab06/lab06_16/: lab06_16.ipynb
labs/lab06/lab06_17/: lab06_17.ipynb
labs/lab07/: lab7_18.ipynb  main.md
labs/lab07/data/: .gitkeep
labs/lab07/lab07_03/: lab07_03.ipynb
labs/lab07/lab07_04/: lab07_04.ipynb
labs/lab07/lab07_10/: lab07.ipynb
labs/lab07/lab07_14/: lab07_14.ipynb
labs/lab07/lab07_15/: lab07_15.ipynb
labs/lab07/lab07_16/: lab07_16.ipynb
labs/lab07/lab07_9/: lab07_9.ipynb
labs/project12/: project12.ipynb
labs_dl/lab00/: lab00.md
labs_dl/lab01/: lab01.ipynb  lab01.md  lab01_05.ipynb  lab_01_12.ipynb
labs_dl/lab01/lab01_03/: lab01_03.ipynb
labs_dl/lab01/lab01_07/: lab01_07.ipynb
labs_dl/lab01/lab01_09/: lab01_09.ipynb
labs_dl/lab01/lab01_10/: lab01_10.ipynb
labs_dl/lab01/lab01_14/: lab01_14.ipynb
labs_dl/lab01/lab01_16/: lab01_16.ipynb
labs_dl/lab01/lab01_18/: lab01_18.ipynb
labs_dl/lab01/lab01_busarov/: lab01_busarov.ipynb
labs_dl/lab02/: lab02.md  lab02_16.ipynb  lab_02_12.ipynb
labs_dl/lab02/lab02_03/: lab02_03.ipynb
labs_dl/lab02/lab02_05_6sem/: lab02_05.ipynb
labs_dl/lab02/lab02_07/: lab02_07.ipynb
labs_dl/lab02/lab02_07_busarov/: lab02_07_busarov.ipynb
labs_dl/lab02/lab02_10/: lab02_10.ipynb
labs_dl/lab02/lab02_14/: lab02_14.ipynb
labs_dl/lab02/lab02_18/: lab02_18.ipynb
labs_dl/lab03/: lab03.md
labs_dl/lab03/lab03_03/: lab03_03.ipynb
labs_dl/lab03/lab03_05_6sem/: lab03_05.ipynb
labs_dl/lab03/lab03_10/: lab03_10.ipynb
labs_dl/lab03/lab03_16/: lab03_16.ipynb
labs_dl/lab04/: lab04.md
labs_ml/: results.csv
labs_ml/lab02/: main.md
labs_ml/lab03/: main.ipynb  main.md
labs_ml/lab06/: main.md
labs_ml/lab07/: main.md
projects/: projects.csv  projects_data.md
projects/pr08/: pr08.ipynb
projects/project03/: project.ipynb
projects/project05/: project_baryshev_5var.ipynb
projects/project09/: projectwine.ipynb  wine.csv
projects/project10/: project10.ipynb
projects/project11/: project11.ipynb
projects/project13/: project13.ipynb
projects/project14/: project14.ipynb
projects/project16/: sergeev_16.ipynb
projects/project_07_Busarov/: project_07.ipynb
(+58 files in other folders)
