[tool.poetry]
name = "mlda"
version = "0.1.0"
description = "Machine learning and data analysis"
authors = ["askras <askrasnikov@gmail.com>"]
license = "BSD 3-Clause License"
readme = "README.md"


[tool.poetry.dependencies]
python = ">=3.9,<3.13"

notebook = "^7.0.6"
pandas = "^2.1.3"
scikit-learn = "^1.3.2"
tqdm = "^4.66.1"
matplotlib = "^3.8.1"
xgboost = "^2.0.2"
ipywidgets = "^8.1.1"
jupyterlab-widgets = "^3.0.9"
jupytext = "^1.15.2"
torch = "^2.2.0"
torchvision = "^0.17.0"


[tool.poetry.group.dev.dependencies]


[tool.jupytext]
formats = "ipynb,md"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
